# STS2-DevMode

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.zh-CN.md  CONTRIBUTING.md  DevMode.csproj  DevMode.json  DevMode.sln  Directory.Build.props  KitLib.json  KitLib.sln  LICENSE  Makefile  README.md  README.zh-CN.md  TODO.md  export_presets.cfg  project.godot  pyproject.toml  setup.cfg
.github/: pull_request_template.md
assets/: readme.nexus.txt
docs/: README.md  ai-algorithm.md  architecture.md  lan-host-drive-afk.md  sts2-api-profiles.md  valaxy.config.ts
editor/: app.js  blocks.js  generators.js  i18n.js  index.html
eng/: KitLib.Core.Compile.props  KitLib.Mod.Shared.props  KitLib.RuntimeDeps.props  KitLib.Satellite.Compile.props  KitLib.SatelliteMod.targets  Sts2Refs.props  api_touchpoints.yaml
scripts/: IconTreeShaker.csx  Shake-Icons.ps1  capture_sts2_ref.py  check_api_touchpoints.py  deploy_modules.py  deploy_tools.py  extract_api_touchpoints.py  init.ps1  init.py  launch_sts2.py  package_modules.py  publish-release.ps1  publish_nexus.py  publish_nuget.py  publish_release.py  resolve_sts2_compile_profile.py  resolve_sts2_profile_dir.py  run-kitlib-mcp.bat  shake_icons.py
src/: AssetWarmupService.cs  CardLibraryVisibility.cs  CardPreviewHelper.cs  ConsoleBridge.cs  DevModeProcessNode.cs  DevModeState.cs  DevPanel.cs  GameLogFileHydrator.cs  I18N.cs  LogCollector.cs  LogSuppressor.cs  MainFile.cs  PlayerCheatEffects.cs  RunContext.cs  RuntimeStatModifiers.cs  SaveSlotManager.cs  (+7 more)
(+714 files in other folders)
