[project]
name = "kitlib-dev"
version = "0.0.0"
description = "Development tooling for the KitLib mod repository."
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "pre-commit>=3.7.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.black]
line-length = 180
